# Computer

./: .gitignore  OPCODES.md  README.md
BIOS/: BIOS.Tasm  BIOS_OLD.Tasm  README.md
Toolchain/Assembler/: assembler.c  bios  compile.sh
VirtualMachine/: CMakeLists.txt
VirtualMachine/SampleHardware/: TitaniumSystem1.xml
VirtualMachine/src/: CPU.cpp  CPU.hpp  Memory.cpp  Memory.hpp  VGA.cpp  VGA.hpp  computer.cpp  computer.hpp  main.cpp
VirtualMachine/src/pugixml/: pugixml.cpp
VirtualMachine/src/vmDisplay/: main.cpp
